changes text content and price page updated

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         <section class="ht-hero-area">
             <div class="container">
                 <div class="ht-hero-content">
-                    <h1>Hostero</h1>
-                    <p>Hosting like never before</p>
+                    <h1>Discover the Right Talent in Time</h1>
+                    <p>Best candidates using our intelligent hiring platform</p>
                     <div class="ht-hero-button">
-                        <a href="price.html">Pricing</a>
-                        <a href="#">Contact</a>
+                        <a href="price.html">Get started</a>
+                        <a href="#">Post a Job Today</a>
                     </div>
                 </div>
             </div>
