--- a/price.html
+++ b/price.html
@@ -86,7 +86,7 @@
                     <button class="get-plan">Get Plan</button>
                 </div>
                 <!-- Standard Plan -->
-                <div class="plan">
+                <div class="plan active">
                     <h2>Standard</h2>
                     <p>50GB Storage</p>
                     <p>500GB Bandwidth</p>
